adding token type to the document spec

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,4 @@
 [pytest]
-addopts = --ignore=setup.py
+addopts = --ignore=setup.py --ignore=scratchpad.py
 filterwarnings =
     ignore::DeprecationWarning
