--- a/batchalign/models/speaker/config.yaml
+++ b/batchalign/models/speaker/config.yaml
@@ -10,7 +10,7 @@ num_workers: 0
 sample_rate: 16000
 batch_size: 8
 device: null # can specify a specific device, i.e: cuda:1 (default cuda if cuda available, else cpu)
-verbose: True # enable additional logging
+verbose: False # enable additional logging
 
 diarizer:
   manifest_filepath: ???
