--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,4 @@
 recursive-include batchalign *.py
 include batchalign/version
 include batchalign/pipelines/cleanup/support/*
+include batchalign/models/speaker/*.yaml
